--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,10 +46,10 @@ body {
 }
 
 .align_description{
-
+    display: inline-block;
 }
 #name{
-    margin: 20px 300px 20px 20px;
+
 }
 #type{
     margin-left: 80%;
@@ -58,4 +58,7 @@ body {
     width: 200px;
     height: 174px;
     background:#a5ab96;
+}
+#pokemonName{
+    margin-left: 0;
 }
