--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,43 +1,81 @@
+@font-face {
+    font-family: "pokemonFont";
+    src: url("../font/pokemonHollow.ttf");
+}
+
 body {
-    margin: 0; /* pour éviter les marges */
+    margin: 0;
     padding: 0;
 }
-#header{
 
+#header {
     margin-left: 30%;
+}
+
+#container {
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: flex-end;
+    align-content: stretch;
+    margin-top: 5%;
 
 }
-#container{
-    margin-left: 10%;
+
+.errorBlock {
+    color: blue;
+    text-align: center;
+    font-family: "pokemonFont", serif;
+    width: 200px;
+    padding-top: 5%;
+    font-size: 150%;
+
+}
+
+#containerImg {
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: stretch;
+
+}
+
+#containerPrincipal {
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
+
     width: 500px;
     height: 600px;
     background: #bf404a;
-    border-radius: 25px;
-
+    border-radius: 25px 25px 0 25px;
 }
 
-#whiteCube{
-    width: 260px;
-    height: 300px;
-    margin: 220px 120px;
-    background: #e6e6e6;
-    border-radius: 30px 30px 30px 80px;
-}
-#container2{
+
+
+#container2 {
     width: 500px;
     height: 400px;
-    background: #bf404a;
-    border-radius: 25px;
-    margin-left: auto;
+    background:#bf404a;
+    border-radius: 0 25px 25px 0;
+    margin-left: -4px;
 
 }
-.align{
 
-    margin-top: 5%;
-    display: inline-block;
-    vertical-align: bottom;
+.align {
+
 }
-#container_pokemon_name{
+
+#container_pokemon_name {
     width: 450px;
     height: 150px;
     background: #a2a894;
@@ -45,20 +83,150 @@ body {
     margin: 20px 20px 20px 20px;
 }
 
-.align_description{
-    display: inline-block;
+.align_description {
+    font-size: 150%;
+    margin-left: 30%;
+
+    vertical-align: bottom;
 }
-#name{
+
+#name {
+    margin-bottom: 6%;
+    padding-top: 5%;
+}
+
+#type {
 
 }
-#type{
-    margin-left: 80%;
-}
-#content_img{
+
+#content_img {
     width: 200px;
     height: 174px;
-    background:#a5ab96;
+    background: #a5ab96;
+    margin: 40px 20px 60px 20px;
+    border-radius: 5px 5px 5px 5px;
 }
-#pokemonName{
+
+#pokemonName {
     margin-left: 0;
 }
+.img {
+    width: 250px;
+    height: 220px;
+    border-radius: 10px 10px 10px 10px;
+    background-color: #a5ab96;
+}
+.row {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: baseline;
+    align-content: stretch;
+    margin: 10px 30px 15px 20px;
+}
+.rowBottom {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: baseline;
+    align-content: stretch;
+    margin: 10px 30px 15px 20px;
+}
+.buttonRight {
+    width: 18%;
+    height: 25px;
+    background: #28aafd;
+}
+.buttonBottom {
+    width: 18%;
+    height: 25px;
+    margin-right: 3%;
+    background: #dedede;
+
+}
+.circle {
+    margin-left: 50%;
+    width: 20%;
+    height: 50px;
+    background: #9f8b0f;
+    border-radius: 50px 50px 50px 50px;
+}
+
+#circleYellow {
+
+    width: 30px;
+    height: 30px;
+    background: #ffdf18;
+
+}
+
+#bloc1 {
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: stretch;
+    align-content: stretch;
+    margin-bottom: 20%;
+
+}
+
+#bloc2 {
+
+    width: 260px;
+    height: 300px;
+    background: #ffffff;
+    border-radius: 30px 30px 30px 80px;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: stretch;
+
+}
+#bloc3 {
+
+    width: 50px;
+    height: 50px;
+    background: black;
+}
+.circleRight {
+    background: blue;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px 25px 25px 25px;
+    margin-top: 2%;
+
+}
+#firstCircle {
+    margin-top: 2%;
+}
+
+#containerBlack {
+    background: #a2a894;
+    width: 220px;
+    height: 220px;
+    border-radius: 20px 20px 20px 20px;
+    margin-bottom: 5%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: stretch;
+}
+#circleContainerImg {
+    background: red;
+    width: 30px;
+    height: 30px;
+    border-radius: 15px 15px 15px 15px;
+    margin-right: 60%;
+}
+.imgError {
+    width: 220px;
+    height: 220px;
+}
+
