--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,13 @@
     font-family: "pokemonFont";
     src: url("../font/pokemonHollow.ttf");
 }
-
 body {
     margin: 0;
     padding: 0;
 }
-
 #header {
     margin-left: 30%;
 }
-
 #container {
     display: flex;
     flex-direction: row;
@@ -20,41 +17,29 @@ body {
     align-items: flex-end;
     align-content: stretch;
     margin-top: 5%;
-
-
 }
-
 .errorBlock {
-
     text-align: center;
     font-family: "pokemonFont", serif;
     font-weight: bold;
     margin-left: 5%;
     font-size: 150%;
-
 }
-
 #containerImg {
-
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
     align-content: stretch;
-
-
 }
-
 #containerPrincipal {
-
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: flex-start;
     align-items: stretch;
     align-content: stretch;
-
     width: 500px;
     height: 600px;
     background: #bf404a;
@@ -63,9 +48,6 @@ body {
     -moz-box-shadow: 10px 10px 118px 0 rgba(0,0,0,0.75);
     box-shadow: 10px 10px 118px 0 rgba(0,0,0,0.75);
 }
-
-
-
 #container2 {
     width: 500px;
     height: 400px;
@@ -75,11 +57,8 @@ body {
     -webkit-box-shadow: 25px 5px 81px -15px rgba(0,0,0,1);
     -moz-box-shadow: 25px 5px 81px -15px rgba(0,0,0,1);
     box-shadow: 25px 5px 81px -15px rgba(0,0,0,1);
-
 }
-
 #topBlock{
-
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -89,9 +68,7 @@ body {
     margin-bottom: 10%;
 
 }
-
 #screenBlock{
-
     width: 260px;
     height: 300px;
     background: #ffffff;
@@ -106,10 +83,8 @@ body {
     -webkit-box-shadow: -1px 5px 81px -15px rgba(0,0,0,1);
     -moz-box-shadow: -1px 5px 81px -15px rgba(0,0,0,1);
     box-shadow: -1px 5px 81px -15px rgba(0,0,0,1);
-
 }
 #statsBlock {
-
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -118,7 +93,6 @@ body {
     align-content: stretch;
     padding-bottom: 3%;
 }
-
 #firstCircle {
     margin: 2% 5%;
     display: flex;
@@ -134,9 +108,7 @@ body {
     -webkit-box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
     -moz-box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
     box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
-
 }
-
 #pokedex{
     padding-top: 3%;
     margin-left: 3%;
@@ -144,7 +116,6 @@ body {
     font-size: 190%;
     font-weight: bold;
     font-family: "pokemonFont", serif;
-
 }
 #containerGrey {
     background: #a2a894;
@@ -183,11 +154,9 @@ body {
     width: 220px;
     height: 220px;
 }
-
 #errorBlock{
     width: 400px;
 }
-
 #blockNumber {
     width: 180px;
     height: 100px;
@@ -203,10 +172,8 @@ body {
     -webkit-box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
     -moz-box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
     box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
-
 }
 #whiteNumber{
-
     width: 160px;
     height:100px;
     border-radius: 10px 10px 10px 10px;
@@ -219,13 +186,10 @@ body {
     background: linear-gradient(to bottom,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', endColorstr='#b4e391',GradientType=0 ); /* IE6-9 */
 }
-
 .imgStat{
     margin-left: 10px;
     width: 30%;
 }
-
-
 #blockStat{
     display: flex;
     flex-direction: column;
@@ -250,7 +214,6 @@ body {
     align-items: flex-start;
     align-content: stretch;
 }
-
 .nbStats{
     width: 60px;
     height: 60px;
@@ -258,7 +221,7 @@ body {
     font-size: 150%;
     font-family: "pokemonFont", serif;
     font-weight: bold;
-    border-radius: 30px 30px 30px 30px;
+    border-radius: 50%;
     background: white;
     text-align: center;
     -webkit-box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
@@ -268,14 +231,10 @@ body {
     background: -webkit-linear-gradient(top,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', endColorstr='#b4e391',GradientType=0 ); /* IE6-9 */
-
 }
 #nbAttack{
     margin-bottom: 2%;
 }
-
-
-
 #container_pokemon_name {
     width: 450px;
     height: 150px;
@@ -291,24 +250,18 @@ body {
     background: -webkit-linear-gradient(top,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom,  rgba(180,227,145,1) 0%,rgba(97,196,25,1) 50%,rgba(180,227,145,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', endColorstr='#b4e391',GradientType=0 ); /* IE6-9 */
-
-
 }
-
 .align_description {
     font-size: 150%;
     margin-left: 30%;
     vertical-align: bottom;
 }
-
 #name {
 
 }
-
 #type {
 
 }
-
 #content_img {
     width: 200px;
     height: 174px;
@@ -316,7 +269,6 @@ body {
     margin: 40px 20px 60px 20px;
     border-radius: 5px 5px 5px 5px;
 }
-
 #pokemonName {
     margin-left: 0;
 }
@@ -351,7 +303,6 @@ body {
     -moz-box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
     box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
     margin-bottom: 1%;
-
 }
 .buttonBottom {
     width: 80px;
@@ -362,7 +313,6 @@ body {
     -webkit-box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
     -moz-box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
     box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
-
 }
 .circle {
     margin-left: 40%;
@@ -374,12 +324,11 @@ body {
     -moz-box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
     box-shadow: -1px 5px 56px -15px rgba(0,0,0,1);
 }
-
 #circleYellow {
-
     width: 30px;
     height: 30px;
     background: #ffdf18;
-
 }
-
+.hide{
+    display:none;
+}
